feat: adding user CRUD with entity framework and documentation of how to run the project till now.

--- a/EarthSentry.Domain/EarthSentry.Domain.csproj
+++ b/EarthSentry.Domain/EarthSentry.Domain.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EarthSentry.Contracts\EarthSentry.Contracts.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
+    <ProjectReference Include="..\EarthSentry.Contracts\EarthSentry.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
