--- a/EarthSentry.Server/appsettings.Development.json
+++ b/EarthSentry.Server/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "EarthDB": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=EarthSentry@1234;SearchPath=earth;"
     }
-  }
 }
