--- a/EarthSentry.CrossCutting/EarthSentry.CrossCutting.csproj
+++ b/EarthSentry.CrossCutting/EarthSentry.CrossCutting.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
 	  <ProjectReference Include="..\EarthSentry.Contracts\EarthSentry.Contracts.csproj" />
+	  <ProjectReference Include="..\EarthSentry.Data\EarthSentry.Data.csproj" />
 	  <ProjectReference Include="..\EarthSentry.Domain\EarthSentry.Domain.csproj" />
   </ItemGroup>
 
