--- a/EarthSentry.CrossCutting/EarthSentry.CrossCutting.csproj
+++ b/EarthSentry.CrossCutting/EarthSentry.CrossCutting.csproj
@@ -7,13 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
 	  <ProjectReference Include="..\EarthSentry.Contracts\EarthSentry.Contracts.csproj" />
 	  <ProjectReference Include="..\EarthSentry.Data\EarthSentry.Data.csproj" />
 	  <ProjectReference Include="..\EarthSentry.Domain\EarthSentry.Domain.csproj" />
+	  <ProjectReference Include="..\EarthSentry.Services\EarthSentry.Services.csproj" />
   </ItemGroup>
 
 </Project>
