--- a/EarthSentry.Server/Properties/launchSettings.json
+++ b/EarthSentry.Server/Properties/launchSettings.json
@@ -17,6 +17,7 @@
             "applicationUrl": "http://localhost:5253",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
+                "CLOUDINARY_URL": "cloudinary://383451275764556:kZNJ6jtzW00imgdZAh-u6fBe6eY@doxnuwxke",
                 "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
             }
         },
@@ -28,7 +29,7 @@
             "applicationUrl": "https://localhost:7032;http://localhost:5253",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
-                "CLOUDINARY_URL": "CLOUDINARY_URL=cloudinary://383451275764556:kZNJ6jtzW00imgdZAh-u6fBe6eY@doxnuwxke",
+                "CLOUDINARY_URL": "cloudinary://383451275764556:kZNJ6jtzW00imgdZAh-u6fBe6eY@doxnuwxke",
                 "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
             }
         },
@@ -38,6 +39,7 @@
             "launchUrl": "swagger",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
+                "CLOUDINARY_URL": "cloudinary://383451275764556:kZNJ6jtzW00imgdZAh-u6fBe6eY@doxnuwxke",
                 "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
             }
         }
