--- a/EarthSentry.Frontend/earthsentry-app/package.json
+++ b/EarthSentry.Frontend/earthsentry-app/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
